switch mongoose to sequelize, need to update tests and remove [Circular]

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,7 @@
 NODE_ENV=development
-PORT=4040
+PORT=4000
 JWT_SECRET=0a6b944d-d2fb-46fc-a85e-0295c986cd9f
-MONGO_HOST=mongodb://localhost/express-mongoose-es6-rest-api-development
-MONGO_PORT=27017
+PG_DB=api
+PG_PORT=5432
+PG_USER=amida
+PG_PASSWD=''
