--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "express-mongoose-es6-rest-api",
-  "version": "2.0.0",
-  "description": "A Boilerplate application for building REST APIs using express, mongoose in ES6 with code coverage",
-  "author": "Kunal Kapadia <kunalkapadia12@gmail.com>",
+  "name": "amida-api-boilerplate",
+  "version": "0.1.0",
+  "description": "A Boilerplate application for building REST APIs",
+  "author": "Jacob Sachs <jacob@amida-tech.com>",
   "main": "index.js",
   "private": false,
   "engines": {
@@ -12,10 +12,11 @@
   },
   "scripts": {
     "start": "gulp serve",
-    "start:debug": "cross-env DEBUG=express-mongoose-es6-rest-api:* yarn start",
+    "start:debug": "cross-env DEBUG=amida-api-boilerplate:* yarn start",
     "build": "gulp",
     "lint": "esw *.js server config --color",
     "lint:watch": "yarn lint -- --watch",
+    "beautify": "es-beautifier -u -c .eslintrc.js *.js server config",
     "precommit": "yarn lint && yarn test",
     "test": "cross-env NODE_ENV=test ./node_modules/.bin/mocha --ui bdd --reporter spec --colors --compilers js:babel-core/register server/tests --recursive",
     "test:watch": "yarn test -- --watch",
@@ -23,42 +24,35 @@
     "test:check-coverage": "yarn test:coverage && istanbul check-coverage",
     "report-coverage": "coveralls < ./coverage/lcov.info"
   },
-  "repository": {
-    "type": "git",
-    "url": "git@github.com:KunalKapadia/express-mongoose-es6-rest-api.git"
-  },
-  "keywords": [
-    "express",
-    "node",
-    "node.js",
-    "mongodb",
-    "mongoose",
-    "es6",
-    "mocha",
-    "istanbul",
-    "REST",
-    "API",
-    "boilerplate"
-  ],
   "dependencies": {
     "bluebird": "3.4.6",
     "body-parser": "1.15.2",
+    "chai": "^3.4.1",
     "compression": "1.6.2",
     "cookie-parser": "1.4.3",
     "cors": "2.8.1",
     "debug": "^2.4.5",
+    "del": "^2.2.0",
     "dotenv": "^4.0.0",
     "express": "4.14.0",
     "express-jwt": "5.1.0",
     "express-validation": "1.0.1",
     "express-winston": "2.1.2",
+    "gulp": "3.9.1",
+    "gulp-load-plugins": "^1.2.0",
     "helmet": "3.1.0",
     "http-status": "^0.2.0",
     "joi": "10.0.6",
     "jsonwebtoken": "7.1.9",
+    "lodash": "4.17.4",
     "method-override": "^2.3.5",
-    "mongoose": "4.7.4",
     "morgan": "1.7.0",
+    "pg": "6.1.5",
+    "pg-hstore": "2.3.2",
+    "run-sequence": "^1.1.5",
+    "sequelize": "3.30.4",
+    "supertest": "2.0.1",
+    "supertest-as-promised": "4.0.2",
     "winston": "2.3.0"
   },
   "devDependencies": {
@@ -67,19 +61,15 @@
     "babel-plugin-add-module-exports": "0.2.1",
     "babel-preset-es2015": "6.16.0",
     "babel-preset-stage-2": "6.18.0",
-    "chai": "^3.4.1",
+    
     "commitizen": "^2.9.2",
     "coveralls": "^2.11.6",
     "cross-env": "3.1.3",
-    "cz-conventional-changelog": "1.2.0",
-    "del": "^2.2.0",
     "eslint": "3.16.1",
     "eslint-config-airbnb-base": "7.1.0",
     "eslint-plugin-import": "1.16.0",
     "eslint-watch": "2.1.14",
-    "gulp": "3.9.1",
-    "gulp-babel": "6.1.2",
-    "gulp-load-plugins": "^1.2.0",
+    "gulp-babel": "6.1.2",   
     "gulp-newer": "^1.1.0",
     "gulp-nodemon": "^2.0.6",
     "gulp-sourcemaps": "^1.6.0",
@@ -87,16 +77,7 @@
     "husky": "^0.13.1",
     "istanbul": "1.1.0-alpha.1",
     "mocha": "3.2.0",
-    "run-sequence": "^1.1.5",
-    "supertest": "2.0.1",
-    "supertest-as-promised": "4.0.2",
     "validate-commit-msg": "^2.6.1"
-  },
-  "license": "MIT",
-  "config": {
-    "commitizen": {
-      "path": "./node_modules/cz-conventional-changelog"
-    }
   },
   "babel": {
     "presets": [
