--- a/package.json
+++ b/package.json
@@ -34,12 +34,10 @@
     "debug": "^2.4.5",
     "del": "^2.2.0",
     "dotenv": "^4.0.0",
-    "express": "4.14.0",
+    "express": "^4.16.3",
     "express-jwt": "5.1.0",
     "express-validation": "1.0.1",
     "express-winston": "2.1.2",
-    "gulp": "3.9.1",
-    "gulp-load-plugins": "^1.2.0",
     "helmet": "3.1.0",
     "http-status": "^0.2.0",
     "joi": "10.0.6",
@@ -47,13 +45,15 @@
     "lodash": "4.17.4",
     "method-override": "^2.3.5",
     "morgan": "1.7.0",
-    "pg": "6.1.5",
-    "pg-hstore": "2.3.2",
+    "mysql": "2.15.0",
+    "mysql2": "^1.5.3",
     "run-sequence": "^1.1.5",
-    "sequelize": "3.30.4",
+    "sequelize": "^4.37.10",
     "supertest": "2.0.1",
     "supertest-as-promised": "4.0.2",
-    "winston": "2.3.0"
+    "winston": "2.3.0",
+    "gulp": "3.9.1",
+    "gulp-load-plugins": "^1.2.0"
   },
   "devDependencies": {
     "babel-cli": "6.18.0",
@@ -61,7 +61,6 @@
     "babel-plugin-add-module-exports": "0.2.1",
     "babel-preset-es2015": "6.16.0",
     "babel-preset-stage-2": "6.18.0",
-    
     "commitizen": "^2.9.2",
     "coveralls": "^2.11.6",
     "cross-env": "3.1.3",
@@ -69,7 +68,7 @@
     "eslint-config-airbnb-base": "7.1.0",
     "eslint-plugin-import": "1.16.0",
     "eslint-watch": "2.1.14",
-    "gulp-babel": "6.1.2",   
+    "gulp-babel": "6.1.2",
     "gulp-newer": "^1.1.0",
     "gulp-nodemon": "^2.0.6",
     "gulp-sourcemaps": "^1.6.0",
