--- a/package.json
+++ b/package.json
@@ -53,7 +53,8 @@
     "supertest-as-promised": "4.0.2",
     "winston": "2.3.0",
     "gulp": "3.9.1",
-    "gulp-load-plugins": "^1.2.0"
+    "gulp-load-plugins": "^1.2.0",
+    "web3": "^1.0.0-beta.34"
   },
   "devDependencies": {
     "babel-cli": "6.18.0",
