--- a/package.json
+++ b/package.json
@@ -38,10 +38,13 @@
     "express-jwt": "5.1.0",
     "express-validation": "1.0.1",
     "express-winston": "2.1.2",
+    "gulp": "3.9.1",
+    "gulp-load-plugins": "^1.2.0",
     "helmet": "3.1.0",
     "http-status": "^0.2.0",
     "joi": "10.0.6",
     "jsonwebtoken": "7.1.9",
+    "kue": "^0.11.6",
     "lodash": "4.17.4",
     "method-override": "^2.3.5",
     "morgan": "1.7.0",
@@ -51,10 +54,8 @@
     "sequelize": "^4.37.10",
     "supertest": "2.0.1",
     "supertest-as-promised": "4.0.2",
-    "winston": "2.3.0",
-    "gulp": "3.9.1",
-    "gulp-load-plugins": "^1.2.0",
-    "web3": "^1.0.0-beta.34"
+    "web3": "^1.0.0-beta.34",
+    "winston": "2.3.0"
   },
   "devDependencies": {
     "babel-cli": "6.18.0",
