--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "debug": "^2.4.5",
     "del": "^2.2.0",
     "dotenv": "^4.0.0",
+    "ethereumjs-tx": "^1.3.5",
     "express": "^4.16.3",
     "express-jwt": "5.1.0",
     "express-validation": "1.0.1",
