--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "lint:watch": "yarn lint -- --watch",
     "beautify": "es-beautifier -u -c .eslintrc.js *.js server config",
     "precommit": "yarn lint && yarn test",
-    "test": "cross-env NODE_ENV=test ./node_modules/.bin/mocha --ui bdd --reporter spec --colors --compilers js:babel-core/register server/tests/stress --recursive",
+    "test": "cross-env NODE_ENV=test ./node_modules/.bin/mocha --ui bdd --reporter spec --colors --compilers js:babel-core/register server/tests/stress --recursive --timeout 150000",
     "test:watch": "yarn test -- --watch",
     "test:coverage": "cross-env NODE_ENV=test ./node_modules/.bin/istanbul cover _mocha -- --ui bdd --reporter spec --colors --compilers js:babel-core/register server/tests --recursive",
     "test:check-coverage": "yarn test:coverage && istanbul check-coverage",
@@ -51,6 +51,7 @@
     "morgan": "1.7.0",
     "mysql": "2.15.0",
     "mysql2": "^1.5.3",
+    "node-cron": "^1.2.1",
     "run-sequence": "^1.1.5",
     "sequelize": "^4.37.10",
     "supertest": "2.0.1",
@@ -78,6 +79,7 @@
     "gulp-util": "^3.0.7",
     "husky": "^0.13.1",
     "istanbul": "1.1.0-alpha.1",
+    "loadtest": "^3.0.3",
     "mocha": "3.2.0",
     "validate-commit-msg": "^2.6.1"
   },
