--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,19 @@
 NODE_ENV=development
 PORT=4000
-JWT_SECRET=0a6b944d-d2fb-46fc-a85e-0295c986cd9f
-PG_DB=api
-PG_PORT=5432
-PG_HOST=localhost
-PG_USER=amida
-PG_PASSWD=''
+SECRET_KEY=0a6b944d-d2fb-46fc-a85e-0295c986cd9f
+
+MYSQL_DB=ethereum_api
+MYSQL_PORT=3306
+MYSQL_HOST=localhost
+MYSQL_USER=root
+MYSQL_PASSWD=
+
+SOCKET_PORT=1334
+#QUEUE
+QUEUE_NAME=transactions
+QUEUE_PORT=6379
+QUEUE_HOST=127.0.0.1
+QUEUE_PWD=
+
+PROVIDER_URL=http://127.0.0.1:8545
+ENTROPY=54674321§3456764321§345674321§3453647544±±±§±±±!!!43534534534534
