--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "scripts": {
     "start": "gulp serve",
+    "initialize": "yarn build && node ./dist/server/scripts/init.js",
     "start:debug": "cross-env DEBUG=amida-api-boilerplate:* yarn start",
     "build": "gulp",
     "lint": "esw *.js server config --color",
@@ -63,6 +64,7 @@
     "babel-cli": "6.18.0",
     "babel-core": "6.18.0",
     "babel-plugin-add-module-exports": "0.2.1",
+    "babel-polyfill": "^6.26.0",
     "babel-preset-es2015": "6.16.0",
     "babel-preset-stage-2": "6.18.0",
     "commitizen": "^2.9.2",
