--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "socket.io": "^2.1.1",
     "supertest": "2.0.1",
     "supertest-as-promised": "4.0.2",
+    "uuid": "^3.3.2",
     "web3": "^1.0.0-beta.34",
     "winston": "2.3.0"
   },
