--- a/package.json
+++ b/package.json
@@ -12,15 +12,17 @@
   },
   "scripts": {
     "start": "gulp serve",
+    "queue": "yarn build && nodemon ./dist/queue/index.js",
+    "cron": "yarn build && nodemon ./dist/cronjob/index.js",
     "initialize": "yarn build && node ./dist/server/scripts/init.js",
     "start:debug": "cross-env DEBUG=amida-api-boilerplate:* yarn start",
     "build": "gulp",
     "lint": "esw *.js server config --color",
     "lint:watch": "yarn lint -- --watch",
     "beautify": "es-beautifier -u -c .eslintrc.js *.js server config",
-    "test": "cross-env NODE_ENV=test ./node_modules/.bin/mocha --ui bdd --reporter spec --colors --compilers js:babel-core/register server/tests/stress --recursive --timeout 150000",
+    "test": "cross-env NODE_ENV=test ./node_modules/.bin/mocha --ui bdd --reporter spec --colors --compilers js:babel-core/register tests/stress --recursive --timeout 150000",
     "test:watch": "yarn test -- --watch",
-    "test:coverage": "cross-env NODE_ENV=test ./node_modules/.bin/istanbul cover _mocha -- --ui bdd --reporter spec --colors --compilers js:babel-core/register server/tests --recursive",
+    "test:coverage": "cross-env NODE_ENV=test ./node_modules/.bin/istanbul cover _mocha -- --ui bdd --reporter spec --colors --compilers js:babel-core/register tests --recursive",
     "test:check-coverage": "yarn test:coverage && istanbul check-coverage",
     "report-coverage": "coveralls < ./coverage/lcov.info"
   },
