--- a/.env.example
+++ b/.env.example
@@ -1,19 +1,26 @@
-NODE_ENV=development
+NODE_ENV=production
 PORT=4000
-SECRET_KEY=0a6b944d-d2fb-46fc-a85e-0295c986cd9f
+API_URL=http://localhost:4000
+SECRET_KEY=
 
 MYSQL_DB=ethereum_api
 MYSQL_PORT=3306
 MYSQL_HOST=localhost
 MYSQL_USER=root
 MYSQL_PASSWD=
-
-SOCKET_PORT=1334
+SOCKET_PORT=1336
 #QUEUE
 QUEUE_NAME=transactions
 QUEUE_PORT=6379
 QUEUE_HOST=127.0.0.1
 QUEUE_PWD=
 
-PROVIDER_URL=http://127.0.0.1:8545
+#Web3
+PROVIDER_TYPE=rinkeby
+PROVIDER_URL=http://34.221.108.172:8545
 ENTROPY=54674321§3456764321§345674321§3453647544±±±§±±±!!!43534534534534
+
+DEFAULT_ADDRESS=0xcd8e715bc4f2487dbdb1e745b8b2e9f18496db8e
+PRIVATE_KEY=
+CHAINPAY_CONTRACT_ADDRESS=0xcb633d96919af1614b0884053e5b7785aac90f3b
+TOKEN_CONTRACT_ADDRESS=
