--- a/.env.example
+++ b/.env.example
@@ -8,6 +8,8 @@ MYSQL_PORT=3306
 MYSQL_HOST=localhost
 MYSQL_USER=root
 MYSQL_PASSWD=
+
+TX_PER_SEC=100
 SOCKET_PORT=1336
 #QUEUE
 QUEUE_NAME=transactions
