--- a/.env.example
+++ b/.env.example
@@ -24,5 +24,5 @@ ENTROPY=54674321§3456764321§345674321§3453647544±±±§±±±!!!435345345345
 
 DEFAULT_ADDRESS=0xcd8e715bc4f2487dbdb1e745b8b2e9f18496db8e
 PRIVATE_KEY=
-CHAINPAY_CONTRACT_ADDRESS=0xcb633d96919af1614b0884053e5b7785aac90f3b
-TOKEN_CONTRACT_ADDRESS=
+CONTRACT_ADDRESS=0xcb633d96919af1614b0884053e5b7785aac90f3b
+PAYMENT_ADDRESS=
