setup script and docs

--- a/.env.example
+++ b/.env.example
@@ -1,28 +1,56 @@
+# Env variable example file
+# Edit before use
+
+# This should be set to `production` or `development`. If set to `development`, it will clear database when initialing app by `npm run initialize`.
 NODE_ENV=production
+
+# Api port
 PORT=4000
+
+# Api Url for testing
 API_URL=http://localhost:4000
+
+#  Used to encrypt/decrypt private keys for accounts
 SECRET_KEY=
 
+# DB configuration
 MYSQL_DB=ethereum_api
 MYSQL_PORT=3306
 MYSQL_HOST=localhost
 MYSQL_USER=root
 MYSQL_PASSWD=
 
+# Test setting
 TX_PER_SEC=100
 SOCKET_PORT=1336
+
 #QUEUE
+# Redis related config variables. Should be set prior to starting application
 QUEUE_NAME=transactions
 QUEUE_PORT=6379
 QUEUE_HOST=127.0.0.1
 QUEUE_PWD=
 
 #Web3
+#  Currently supports `testrpc` and `rinkeby`. Should be set according to the network used. Used in init script.
 PROVIDER_TYPE=rinkeby
+
+#  Url of ethereum node. Preferably should be a geth node
 PROVIDER_URL=http://34.221.108.172:8545
+
+# A random string used to create new accounts in web3. Can be left as it is.
 ENTROPY=54674321§3456764321§345674321§3453647544±±±§±±±!!!43534534534534
 
+# Very important. Used to process transactions. Should be owner of ChainPay contract. Only one address is supported at a time.
 DEFAULT_ADDRESS=0xcd8e715bc4f2487dbdb1e745b8b2e9f18496db8e
+
+# Encrypted private key of the default address. May be removed later on. Used to sign transactions for default address
 PRIVATE_KEY=
+
+# Address of ChainPay contract deployed on ethereum node. This is used to make transfers in bulk.
 CONTRACT_ADDRESS=0xcb633d96919af1614b0884053e5b7785aac90f3b
+
+# Address of token contract deployed on ethereum node. Used to update account balance.
 PAYMENT_ADDRESS=
+
+
