--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "lint": "esw *.js server config --color",
     "lint:watch": "yarn lint -- --watch",
     "beautify": "es-beautifier -u -c .eslintrc.js *.js server config",
-    "test": "cross-env NODE_ENV=test ./node_modules/.bin/mocha --ui bdd --reporter spec --colors --compilers js:babel-core/register tests/stress --recursive --timeout 150000",
+    "test": "cross-env NODE_ENV=test ./node_modules/.bin/mocha --ui bdd --reporter spec --slow 0 --colors --compilers js:babel-core/register tests/stress --recursive --timeout 150000",
     "test:watch": "yarn test -- --watch",
     "test:coverage": "cross-env NODE_ENV=test ./node_modules/.bin/istanbul cover _mocha -- --ui bdd --reporter spec --colors --compilers js:babel-core/register tests --recursive",
     "test:check-coverage": "yarn test:coverage && istanbul check-coverage",
