Build process updated

--- a/package.json
+++ b/package.json
@@ -11,11 +11,16 @@
     "yarn": ">=0.20.3"
   },
   "scripts": {
-    "start": "gulp serve",
-    "queue": "yarn build && nodemon ./dist/queue/index.js",
-    "cron": "yarn build && nodemon ./dist/cronjob/index.js",
-    "initialize": "yarn build && node ./dist/scripts/init.js",
-    "crypto": "yarn build && node ./dist/scripts/encrypt.js",
+    "start": "nodemon ./dist/index",
+    "start:build": "gulp serve",
+    "queue": "nodemon ./dist/queue/index.js",
+    "queue:build": "yarn build && nodemon ./dist/queue/index.js",
+    "cron": "nodemon ./dist/cronjob/index.js",
+    "cron:build": "yarn build && nodemon ./dist/cronjob/index.js",
+    "initialize": "node ./dist/scripts/init.js",
+    "initialize:build": "yarn build && node ./dist/scripts/init.js",
+    "crypto": "node ./dist/scripts/encrypt.js",
+    "crypto:build": "yarn build && node ./dist/scripts/encrypt.js",
     "start:debug": "cross-env DEBUG=amida-api-boilerplate:* yarn start",
     "build": "gulp",
     "lint": "esw *.js server config --color",
