--- a/.env.example
+++ b/.env.example
@@ -53,4 +53,6 @@ CONTRACT_ADDRESS=0xcb633d96919af1614b0884053e5b7785aac90f3b
 # Address of token contract deployed on ethereum node. Used to update account balance.
 PAYMENT_ADDRESS=
 
-
+#Papertrail Config Vars
+PAPERTRAIL_HOST=
+PAPERTRAIL_PORT=
