--- a/.env.sandbox
+++ b/.env.sandbox
@@ -36,8 +36,8 @@ QUEUE_PWD=foobared
 PROVIDER_TYPE=rinkeby
 
 #  Url of ethereum node. Preferably should be a geth node
-#PROVIDER_URL=http://34.221.108.172:8545
-PROVIDER_URL=https://rinkeby.infura.io/awYhSaIh2LTHebAsdjLs 
+PROVIDER_URL=http://34.221.108.172:8545
+# PROVIDER_URL=https://rinkeby.infura.io/awYhSaIh2LTHebAsdjLs 
 # A random string used to create new accounts in web3. Can be left as it is.
 ENTROPY=54674321§3456764321§345674321§3453647544±±±§±±±!!!43534534534534
 
