--- a/.env.sandbox
+++ b/.env.sandbox
@@ -56,3 +56,4 @@ PAYMENT_ADDRESS=0x502344307c1a59f600dd6473663cbeae18a9af1d
 #Papertrail Config Vars
 PAPERTRAIL_HOST=logs7.papertrailapp.com
 PAPERTRAIL_PORT=28433
+PAPERTRAIL_PROGRAM=default
