Added batch processing envs

--- a/.env.example
+++ b/.env.example
@@ -57,3 +57,7 @@ PAYMENT_ADDRESS=
 PAPERTRAIL_HOST=
 PAPERTRAIL_PORT=
 PAPERTRAIL_PROGRAM=
+
+TX_BATCH_SIZE=200
+#In milliseconds
+TX_HOLD_TIME=5000
