--- a/.env.sandbox
+++ b/.env.sandbox
@@ -57,3 +57,7 @@ PAYMENT_ADDRESS=0x502344307c1a59f600dd6473663cbeae18a9af1d
 PAPERTRAIL_HOST=logs7.papertrailapp.com
 PAPERTRAIL_PORT=28433
 PAPERTRAIL_PROGRAM=default
+
+TX_BATCH_SIZE=200
+#In milliseconds
+TX_HOLD_TIME=5000
