Callback basic structure

--- a/.env.example
+++ b/.env.example
@@ -61,3 +61,8 @@ PAPERTRAIL_PROGRAM=
 TX_BATCH_SIZE=200
 #In milliseconds
 TX_HOLD_TIME=5000
+
+CALL_BACK_BATCH_SIZE=100
+#In milliseconds
+CALL_BACK_HOLD_TIME=60000
+CALL_BACK_URL=http://localhost:8080
