--- a/.env.sandbox
+++ b/.env.sandbox
@@ -16,27 +16,27 @@ SECRET_KEY=hello123
 # DB configuration
 MYSQL_DB=ethereum_api
 MYSQL_PORT=3306
-MYSQL_HOST=52.88.30.132
-MYSQL_USER=root
-MYSQL_PASSWD=toor
+MYSQL_HOST=chainpay.cs0anrknnz6t.us-east-1.rds.amazonaws.com
+MYSQL_USER=chainpay
+MYSQL_PASSWD=chainpay
 
 # Test setting
-TX_PER_SEC=100
+TX_PER_SEC=10
 SOCKET_PORT=1336
 
 #QUEUE
 # Redis related config variables. Should be set prior to starting application
 QUEUE_NAME=transactions
 QUEUE_PORT=6379
-QUEUE_HOST=52.88.30.132
-QUEUE_PWD=foobared
+QUEUE_HOST=18.208.226.52
+QUEUE_PWD=
 
 #Web3
 #  Currently supports `testrpc` and `rinkeby`. Should be set according to the network used. Used in init script.
 PROVIDER_TYPE=rinkeby
 
 #  Url of ethereum node. Preferably should be a geth node
-PROVIDER_URL=http://34.221.108.172:8545
+PROVIDER_URL=http://34.221.99.147:8545
 # PROVIDER_URL=https://rinkeby.infura.io/awYhSaIh2LTHebAsdjLs 
 # A random string used to create new accounts in web3. Can be left as it is.
 ENTROPY=54674321§3456764321§345674321§3453647544±±±§±±±!!!43534534534534
@@ -55,13 +55,17 @@ PAYMENT_ADDRESS=0x502344307c1a59f600dd6473663cbeae18a9af1d
 
 #Papertrail Config Vars
 PAPERTRAIL_HOST=logs7.papertrailapp.com
-PAPERTRAIL_PORT=28433
+PAPERTRAIL_PORT=14152
 PAPERTRAIL_PROGRAM=default
 
+#Transaction Batching: We will wait for size or hold time before sending a batch, which ever come first. 
+# Max number of transaction per batch. Keep under 200 for production. 
 TX_BATCH_SIZE=200
-#In milliseconds
-TX_HOLD_TIME=5000
 
+#Hold time before sending the batch. In milliseconds
+TX_HOLD_TIME=60000
+
+#Call Batching: We will wait for size or hold time before sending a batch, which ever come first. 
 CALL_BACK_BATCH_SIZE=100
 #In milliseconds
 CALL_BACK_HOLD_TIME=60000
