--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "initialize:build": "yarn build && node ./dist/scripts/init.js",
     "check": "node ./dist/scripts/check.js",
     "check:build": "yarn build && node ./dist/scripts/check.js",
+    "config": "node ./dist/config/config.js",
     "crypto": "node ./dist/scripts/encrypt.js",
     "crypto:build": "yarn build && node ./dist/scripts/encrypt.js",
     "start:debug": "cross-env DEBUG=amida-api-boilerplate:* yarn start",
@@ -41,7 +42,7 @@
     "compression": "1.6.2",
     "cookie-parser": "1.4.3",
     "cors": "2.8.1",
-    "debug": "^2.4.5",
+    "debug": "^2.6.9",
     "del": "^2.2.0",
     "dotenv": "^4.0.0",
     "ethereumjs-tx": "^1.3.5",
