--- a/package.json
+++ b/package.json
@@ -36,68 +36,67 @@
     "report-coverage": "coveralls < ./coverage/lcov.info"
   },
   "dependencies": {
-    "bluebird": "3.4.6",
-    "body-parser": "1.15.2",
-    "chai": "^3.4.1",
-    "compression": "1.6.2",
-    "cookie-parser": "1.4.3",
-    "cors": "2.8.1",
-    "debug": "^2.6.9",
-    "del": "^2.2.0",
-    "dotenv": "^4.0.0",
-    "ethereumjs-tx": "^1.3.5",
-    "express": "^4.16.3",
-    "express-jwt": "5.1.0",
-    "express-validation": "1.0.1",
-    "express-winston": "3.0.1",
-    "gulp": "3.9.1",
-    "gulp-load-plugins": "^1.2.0",
-    "helmet": "3.1.0",
-    "http-status": "^0.2.0",
-    "joi": "10.0.6",
-    "jsonwebtoken": "7.1.9",
-    "kue": "^0.11.6",
-    "lodash": "4.17.4",
-    "method-override": "^2.3.5",
-    "morgan": "1.7.0",
-    "mysql": "2.15.0",
-    "mysql2": "^1.5.3",
-    "node-cron": "^1.2.1",
+    "bluebird": "3.5.5",
+    "body-parser": "1.19.0",
+    "chai": "^4.2.0",
+    "compression": "1.7.4",
+    "cookie-parser": "1.4.4",
+    "cors": "2.8.5",
+    "debug": "^4.1.1",
+    "del": "^4.1.1",
+    "dotenv": "^8.0.0",
+    "ethereumjs-tx": "^1.3.7",
+    "express": "^4.17.1",
+    "express-validation": "1.0.2",
+    "express-winston": "3.1.0",
+    "gulp": "^4.0.2",
+    "gulp-load-plugins": "^1.6.0",
+    "helmet": "3.18.0",
+    "http-status": "^1.3.2",
+    "joi": "14.3.1",
+    "lodash": "4.17.11",
+    "method-override": "^3.0.0",
+    "morgan": "1.9.1",
+    "mysql": "2.17.1",
+    "mysql2": "^1.6.5",
+    "node-cron": "^2.0.3",
+    "redis": "^2.8.0",
     "request": "^2.88.0",
-    "run-sequence": "^1.1.5",
-    "sequelize": "^4.37.10",
-    "socket.io": "^2.1.1",
-    "supertest": "2.0.1",
+    "run-sequence": "^2.2.1",
+    "sequelize": "^5.8.7",
+    "socket.io": "^2.2.0",
+    "supertest": "4.0.2",
     "supertest-as-promised": "4.0.2",
     "uuid": "^3.3.2",
-    "web3": "^1.0.0-beta.34",
-    "winston": "3.1.0",
+    "web3": "^1.0.0-beta.55",
+    "winston": "3.2.1",
     "winston-papertrail": "^1.0.5"
   },
   "devDependencies": {
-    "babel-cli": "6.18.0",
-    "babel-core": "6.18.0",
-    "babel-plugin-add-module-exports": "0.2.1",
+    "@babel/core": "^7.4.5",
+    "babel-cli": "6.26.0",
+    "babel-core": "^6.26.3",
+    "babel-plugin-add-module-exports": "1.0.2",
     "babel-polyfill": "^6.26.0",
-    "babel-preset-es2015": "6.16.0",
-    "babel-preset-stage-2": "6.18.0",
-    "commitizen": "^2.9.2",
-    "coveralls": "^2.11.6",
-    "cross-env": "3.1.3",
-    "eslint": "3.16.1",
-    "eslint-config-airbnb-base": "7.1.0",
-    "eslint-plugin-import": "1.16.0",
-    "eslint-watch": "2.1.14",
-    "gulp-babel": "6.1.2",
-    "gulp-newer": "^1.1.0",
-    "gulp-nodemon": "^2.0.6",
-    "gulp-sourcemaps": "^1.6.0",
-    "gulp-util": "^3.0.7",
-    "husky": "^0.13.1",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-2": "^6.24.1",
+    "commitizen": "^3.1.1",
+    "coveralls": "^3.0.3",
+    "cross-env": "5.2.0",
+    "eslint": "5.16.0",
+    "eslint-config-airbnb-base": "13.1.0",
+    "eslint-plugin-import": "2.17.3",
+    "eslint-watch": "5.1.2",
+    "gulp-babel": "^7.0.1",
+    "gulp-newer": "^1.4.0",
+    "gulp-nodemon": "^2.4.2",
+    "gulp-sourcemaps": "^2.6.5",
+    "gulp-util": "^3.0.8",
+    "husky": "^2.3.0",
     "istanbul": "1.1.0-alpha.1",
-    "loadtest": "^3.0.3",
-    "mocha": "3.2.0",
-    "validate-commit-msg": "^2.6.1"
+    "loadtest": "^3.0.7",
+    "mocha": "^6.1.4",
+    "validate-commit-msg": "^2.14.0"
   },
   "babel": {
     "presets": [
