--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "lint": "esw *.js server config --color",
     "lint:watch": "yarn lint -- --watch",
     "beautify": "es-beautifier -u -c .eslintrc.js *.js server config",
-    "test": "cross-env NODE_ENV=test ./node_modules/.bin/mocha --ui bdd --reporter spec --slow 0 --colors --compilers js:babel-core/register tests --recursive --timeout 1500000",
+    "test": "cross-env NODE_ENV=test ./node_modules/.bin/mocha --ui bdd --reporter spec --slow 0 --colors --require babel-core/register tests --recursive --timeout 1500000",
     "test:watch": "yarn test -- --watch",
     "test:coverage": "cross-env NODE_ENV=test ./node_modules/.bin/istanbul cover _mocha -- --ui bdd --reporter spec --colors --compilers js:babel-core/register tests --recursive",
     "test:check-coverage": "yarn test:coverage && istanbul check-coverage",
@@ -68,7 +68,7 @@
     "supertest": "4.0.2",
     "supertest-as-promised": "4.0.2",
     "uuid": "^3.3.2",
-    "web3": "^1.0.0-beta.55",
+    "web3": "^1.0.0-beta.34",
     "winston": "3.2.1",
     "winston-papertrail": "^1.0.5"
   },
