--- a/package.json
+++ b/package.json
@@ -68,7 +68,7 @@
     "supertest": "4.0.2",
     "supertest-as-promised": "4.0.2",
     "uuid": "^3.3.2",
-    "web3": "^1.0.0-beta.34",
+    "web3": "1.0.0-beta.34",
     "winston": "3.2.1",
     "winston-papertrail": "^1.0.5"
   },
