--- a/token/package.json
+++ b/token/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ChainpayCoin",
+  "name": "FreedomCoin",
   "version": "1.0.0",
   "description": "",
   "main": "truffle-config.js",
@@ -13,7 +13,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "truffle": "^4.0.5",
+    "truffle": "^4.1.14",
     "zeppelin-solidity": "1.6.0"
   }
 }
